# fyp_drone_nav_v1

./: .gitignore  README.md
src/drone_bringup/: CMakeLists.txt  package.xml
src/drone_bringup/config/: ros_gz_bridge.yaml
src/drone_bringup/launch/: nav_bringup.launch.py  slam_bringup.launch.py
src/drone_description/: CMakeLists.txt  package.xml
src/drone_description/launch/: display.launch.py
src/drone_description/rviz/: drone.rviz  navigation.rviz
src/drone_description/urdf/: drone.urdf.xacro
src/drone_gazebo/: CMakeLists.txt  package.xml
src/drone_gazebo/launch/: gazebo.launch.py
src/drone_gazebo/worlds/: maze.sdf  office.sdf  simple_room.sdf
src/drone_navigation/: CMakeLists.txt  package.xml
src/drone_navigation/config/: nav2_astar_params.yaml  nav2_dijkstra_params.yaml  nav2_smac_params.yaml
src/drone_navigation/launch/: navigation.launch.py
src/drone_navigation/scripts/: navigate_with_algorithm.py  set_nav_goal.py
src/drone_slam/: CMakeLists.txt  package.xml
src/drone_slam/config/: slam_toolbox.yaml
src/drone_slam/launch/: map_saver.launch.py  slam.launch.py
src/drone_teleop/: CMakeLists.txt  package.xml
src/drone_teleop/launch/: teleop_keyboard.launch.py
src/drone_teleop/scripts/: teleop_keyboard.py
