<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_bringup</name>
  <version>1.0.0</version>
  <description>
    Top-level bringup package for the drone navigation system.
    Brings up Gazebo, SLAM, Nav2, and teleop in a single launch.
  </description>
  <maintainer email="user@example.com">drone_nav</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>drone_description</depend>
  <depend>drone_gazebo</depend>
  <depend>drone_slam</depend>
  <depend>drone_navigation</depend>
  <depend>drone_teleop</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
