cmake_minimum_required(VERSION 3.8)
project(drone_gazebo)

find_package(ament_cmake REQUIRED)

install(DIRECTORY
  worlds
  launch
  DESTINATION share/${PROJECT_NAME}
)

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/models")
  install(DIRECTORY
    models
    DESTINATION share/${PROJECT_NAME}
  )
endif()

ament_package()
