<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_navigation</name>
  <version>1.0.0</version>
  <description>
    Nav2-based autonomous navigation for the drone.
    Provides three selectable path-planning algorithms:
      1. NavFn (Dijkstra)
      2. NavFn (A*)
      3. Smac Planner Hybrid-A*
  </description>
  <maintainer email="user@example.com">drone_nav</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_bringup</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_smac_planner</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  <depend>nav2_behaviors</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
